# psgen

./: CHANGELOG.md  README.md  psgen.cabal  stack.yaml
app/: Main.hs
src/PSGen/: Problem.hs
src/PSGen/Math/: FactorInteger.hs  Quadratic.hs  Radical.hs
src/PSGen/Problems/: Quadratic.hs
test/PSGen/Math/: FactorIntegerSpec.hs  QuadraticSpec.hs  RadicalSpec.hs
